--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/main.html' %} {% block title %}Fyyur | Venues{% endblock %}
 {% block content %} {% for area in areas %}
 <h3>{{ area.city }}, {{ area.state }}</h3>
-<ul class="items" style="display: flex; align-items: center">
+<ul class="items">
   {% for venue in area.venues %}
   <li>
     <a
